# Thermocam_standalone

./: CMakeLists.txt  README.md  main.cpp  thermocam.cpp  thermocam.h
